--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   background-color: darkgreen;
   color: lightblue;
   Font-family: Arial, helvetica, sans-serif;
-  Margin-left: 20% 10%;
+  text-align:center;
 }
 .info-section{
   border-bottom:1px solid;
