--- a/style.css
+++ b/style.css
@@ -10,3 +10,10 @@ body {
 writing-mode: horizontal-tb;
 }
 
+.info-section{
+  border-bottom:1px solid;
+  border-block-end-style: groove;
+writing-mode: horizontal-tb;
+}
+
+
