--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   background-color: darkgreen;
   color: lightblue;
   Font-family: Arial, helvetica, sans-serif;
-  text-align:center;
+  margin-left:20%,10%;
 }
 .info-section{
   border-bottom:1px solid;
