--- a/style.css
+++ b/style.css
@@ -16,4 +16,14 @@ writing-mode: horizontal-tb;
 writing-mode: horizontal-tb;
 }
 
+.outer {
+  border: 2px solid red;
+  width: 300px;
+  display: contents;
+}
+
+.outer > div {
+  border: 1px solid green;
+}
+
 
