--- a/style.css
+++ b/style.css
@@ -16,17 +16,16 @@ italic{
 
 .pro-exp{
 box-sizing: border-box;
-width: 100%;
+width: 80%;
 border: solid black 5px;
-padding: 5px;
+padding-left: 5px;
 }
-
 
 .edu-section{
 box-sizing: border-box;
-width: 100%;
+width: 80%;
 border: solid black 5px;
-padding: 5px;
+padding-left: 5px;
 }
 
 
