--- a/style.css
+++ b/style.css
@@ -14,20 +14,30 @@ italic{
   font-weight: bold;
   }
 
+.outline{
+ box-sizing: border-box;
+width: 60%;
+border: solid black 2px;
+padding-left: 5px; 
+color: black;
+}
+
 .pro-exp{
 box-sizing: border-box;
-width: 80%;
-border: solid black 1px;
+width: 60%;
+border: solid black 2px;
 padding-left: 5px;
+color: black;  
 }
+
 
 .edu-section{
 box-sizing: border-box;
-width: 80%;
-border: solid black 1px;
+width: 60%;
+border: solid black 2px;
 padding-left: 5px;
-text-align: left;
-}
+color: black;  
+} 
 
 
 
