--- a/style.css
+++ b/style.css
@@ -16,18 +16,23 @@ italic{
 
 
 .pro-exp{
-box-sizing: border-box;
-width: 60%;
-border: solid black 2px;
-padding-left: 5px;
+ text-transform: uppercase;
+ text-align: center;
+ background-color: white; 
+ box-sizing: border-box;
+ width: 60%;
+ border: solid black 2px;
+ padding-left: 5px;
 }
 
 
 .edu-section{
-box-sizing: border-box;
-width: 60%;
-border: solid black 2px;
-padding-left: 5px;
+ text-transform: uppercase;
+ background-color: white; 
+ box-sizing: border-box;
+ width: 60%;
+ border: solid black 2px;
+ padding-left: 5px;
 }
 
 
