--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: darkgreen;
+  background-image: url(./img/45degreee_fabric.png);
   color: lightblue;
   Font-family: Arial, helvetica, sans-serif;
   margin-left:20%,10%;
