--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ italic{
 .pro-exp{
  text-transform: uppercase solid;
  text-align: center;
+ color: black;
  background-color: white; 
  box-sizing: border-box;
  width: 60%;
@@ -30,6 +31,7 @@ italic{
 .edu-section{
  text-transform: uppercase solid;
  text-align: center;
+ color: black;
  background-color: white; 
  box-sizing: border-box;
  width: 60%;
