--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ body {
  color: black;
  background-color: white; 
  box-sizing: border-box solid black;
+ border-bottom-left-radius: 50%;
+ border-bottom-right-radius: 50%;
+ border-top-left-radius: 50%;
+ border-top-right-radius: 50%; 
  width: 60%;
  border: solid black 2px;
  padding-left: 5px;
@@ -35,6 +39,10 @@ body {
  color: black;
  background-color: white; 
  box-sizing: border-box solid black;
+ border-bottom-left-radius: 50%;
+ border-bottom-right-radius: 50%;
+ border-top-left-radius: 50%;
+ border-top-right-radius: 50%; 
  width: 60%;
  border: solid black 2px;
  padding-left: 5px;
